# obsidian-task-management

./: .gitignore  README.md  main.py  obsidian_tasks.py  pyproject.toml  specification.md
src/obsidian_tasks/: __init__.py  __main__.py  cli.py  core.py
