[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-task-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
]

[project.scripts]
obsidian-task-management = "obsidian_tasks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["obsidian_tasks"]
